--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
-name: sms_user_consent
+name: sms_user_consent_manager
 description: Request user's phone number (supports dual sim) and/or consent to read SMS without adding any permissions
-version: 0.1.0
+version: 1.0.0
 repository: https://github.com/pharshdev/sms_user_consent
 
 environment:
